--- a/ImageRepo/appsettings.json
+++ b/ImageRepo/appsettings.json
@@ -1,7 +1,12 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb+srv://ImageAdmin:fcSGcVEZlSttSmqo@cluster0.t6wbq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+    "DatabaseName": "ImageDb"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ImageRepo-BA3AA896-6A5E-4794-B8B5-67E5C1BAFD3D;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
