--- a/ImageRepo/ImageRepo.csproj
+++ b/ImageRepo/ImageRepo.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MongoDB.Bson" Version="2.12.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
     <PackageReference Include="MongoDB.Driver.GridFS" Version="2.12.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
 </Project>
