--- a/ImageRepo/ImageRepo.csproj
+++ b/ImageRepo/ImageRepo.csproj
@@ -20,7 +20,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Images\" />
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Images\734da423-7a85-4bca-aa4a-dfdf172d544d\finnbang.jpg" />
+    <None Include="wwwroot\Images\734da423-7a85-4bca-aa4a-dfdf172d544d\flight.PNG" />
+    <None Include="wwwroot\Images\734da423-7a85-4bca-aa4a-dfdf172d544d\resume.png" />
   </ItemGroup>
 
 </Project>
